--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "appcoins-diceroll-unity-main.sln"
+    "dotnet.defaultSolution": "appcoins-diceroll-unity.sln"
 }
