--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
-    "com.aptoide.unityappcoinssdk": "https://github.com/Catappult/appcoins-sdk-unity.git#v0.9.0.7",
+    "com.aptoide.unityappcoinssdk": "git@github.com:Catappult/appcoins-sdk-unity.git",
     "com.unity.collab-proxy": "2.0.0",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
