--- a/Assets/Plugins/Android/baseProjectTemplate.gradle
+++ b/Assets/Plugins/Android/baseProjectTemplate.gradle
@@ -3,6 +3,8 @@ allprojects {
         repositories {**ARTIFACTORYREPOSITORY**
             google()
             jcenter()
+            mavenCentral()
+            maven { url "https://jitpack.io" }
         }
 
         dependencies {
@@ -18,6 +20,8 @@ allprojects {
     repositories {**ARTIFACTORYREPOSITORY**
         google()
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
         flatDir {
             dirs "${project(':unityLibrary').projectDir}/libs"
         }
